--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<html>
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -6,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Onavino Ajenavi | WDD130</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
