Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Onavino Ajenavi's BYU Idaho WDD 130 course home page">
+    <meta name="author" content="Onavino Ajenavi">
     <title>Onavino Ajenavi | WDD130</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -24,6 +26,13 @@
             myself however possible in that field. I also love music, movies and literature as it tends to give me
             another beauutiful view of life other than ones and zeros.</p>
     </main>
+    <aside>
+        <h2>Nigeria</h2>
+        <img src="images/naija.jpg" alt="A city in Nigeria">
+        <p>Nigeria is a country in West Africa. It is a federal republic made up of 36 states and a Federal Capital
+            Territory, where it's capiital, Abuja, is located. It has been home to many cultures and kingdoms since the
+            second millenium. It is inhabited by more than 250 ethnic groups speaking 500 distinct languages.</p>
+    </aside>
     <footer>
         <p>&copy;2025 🌴 Onavino Ajenavi 🌴 Delta, Nigeria </p>
     </footer>
