Home Page Layout Enhancement

--- a/index.html
+++ b/index.html
@@ -15,18 +15,33 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr">Rafting Website</a>
+            <a href="https://linkedin.com">Profile</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Onavino Ajenavi | WDD130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Onavino Ajenavi" width="200">
         <p>Hi. My name is Onavino Ajenavi and I am from Delta, Nigeria. I am a student of BYU Idaho. I am a
-            student at both BYU Idaho, studying web and computer programming online, and Delta state University,
-            studying Electrical Electronics Engineering on campus. I have passion for Engineering and I wish to improve
+            student at both Brigham Young University (BYU) Idaho, studying web and computer programming online, and
+            Delta state University (Delsu),
+            studying Electrical Electronics Engineering on campus. As a student of Delsu, I am currently in year 3
+            of my 5 year academic calender. My projected graduation time is 2027, which is fast approaching. I will be
+            graduating with a bachelors degree in Electrical Electronics Engineering. I also expect to be graduating
+            from BYU Idaho wityh a bachelors degree in Software Development. I have passion for Engineering and I wish
+            to improve
             myself however possible in that field. I also love music, movies and literature as it tends to give me
             another beauutiful view of life other than ones and zeros.</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=engv"
+                    target="_blank">Aba Nigeria Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng"
+                    target="_blank">Salt Lake Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple?lang=eng"
+                    target="_blank">Paris France Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Nigeria</h2>
         <img src="images/naija.jpg" alt="A city in Nigeria">
         <p>Nigeria is a country in West Africa. It is a federal republic made up of 36 states and a Federal Capital
@@ -37,5 +52,7 @@
         <p>&copy;2025 🌴 Onavino Ajenavi 🌴 Delta, Nigeria </p>
     </footer>
 </body>
+
+<!-- 22nd March, 2025 -->
 
 </html>
