--- a/wwr/about.html
+++ b/wwr/about.html
@@ -51,11 +51,11 @@
         </section>
         <section>
             <h2>Adventure Awaits You</h2>
-            <img src="images/rafting42_600 (1).jpg" alt="Adventure">
-            <img src="images/rafting47_600 (1).jpg" alt="Adventure">
+            <img src="images/raft_1.jpg" alt="Adventure">
+            <img src="images/raft_2.jpg" alt="Adventure">
             <img src="images/rafting56_600.jpg" alt="Adventure">
             <img src="images/rafting59_600.jpg" alt="Adventure">
-            <img src="images/rafting64_600 (1).jpg" alt="Adventure">
+            <img src="images/raft_3.jpg" alt="Adventure">
         </section>
     </main>
     <footer>
