W04 optional: Home Page Layout Enhancements

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
+    <div class="grid">
     <main>
         <h1>Onavino Ajenavi | WDD130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Onavino Ajenavi" width="200">
@@ -48,6 +49,7 @@
             Territory, where it's capiital, Abuja, is located. It has been home to many cultures and kingdoms since the
             second millenium. It is inhabited by more than 250 ethnic groups speaking 500 distinct languages.</p>
     </aside>
+    </div>
     <footer>
         <p>&copy;2025 🌴 Onavino Ajenavi 🌴 Delta, Nigeria </p>
     </footer>
