W04 Rafting Project: Update About Us Page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,8 +30,8 @@
     <main>
         <div class="hero">
             <div class="soap">
-            <img src="images/rafting43_600.jpg" alt="Rafting Scenery">
-            </div>          
+                <img src="images/rafting43_600.jpg" alt="Rafting Scenery">
+            </div>
             <h1>White Water Rafting</h1>
             <article>
                 <img src="images/happy_employee.jpg" alt="Happy Employee">
@@ -43,28 +43,55 @@
                     your family.</p>
             </article>
         </div>
-        <section>
-            <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quam soluta, cumque voluptate
-                sapiente beatae dolor! Possimus quidem ab doloremque, a ducimus, fugit ex laborum, earum iure soluta
-                corporis et?</p>
-        </section>
+            <section>
+            <div class="history">
+                <h2>History</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, voluptas. Illo totam numquam
+                    nesciunt qui ex pariatur ipsam, est quasi labore voluptatum quam ipsum dolorum veniam aliquam quos
+                    placeat deserunt.</p>
+                <img src="images/rafting58_600.jpg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quam soluta, cumque voluptate
+                    sapiente beatae dolor! Possimus quidem ab doloremque, a ducimus, fugit ex laborum, earum iure soluta
+                    corporis et?</p>
+            </div>
+            </section>
+        </div>
+
         <section>
             <h2>Adventure Awaits You</h2>
-            <img src="images/raft_1.jpg" alt="Adventure">
-            <img src="images/raft_2.jpg" alt="Adventure">
-            <img src="images/rafting56_600.jpg" alt="Adventure">
-            <img src="images/rafting59_600.jpg" alt="Adventure">
-            <img src="images/raft_3.jpg" alt="Adventure">
+            <div class="adventure">
+                <figure>
+                    <img src="images/raft_1.jpg" alt="Adventure">
+                    <figcaption>Family Rafting</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/raft_2.jpg" alt="Adventure">
+                    <figcaption>Exciting Waves</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting53_600.jpg" alt="Adventure">
+                    <figcaption>Group Rafting</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting59_600.jpg" alt="Adventure">
+                    <figcaption>Raft with a Smile</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/raft_3.jpg" alt="Adventure">
+                    <figcaption>Follow the Tides</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
         <p>&copy; 2025 White Water Rafting Onavino Ajenavi</p>
-        <nav class="sociallinks">
-            <a href="https://www.facebook.com/oscar.patosi"><img src="images/faceboo.webp" alt=""></a>
-            <a href="https://www.tiktok.com/@oscar_patosi"><img src="images/tiktok.webp" alt=""></a>
-            <a href="https://www.instagram.com/vinojenavs/#"><img src="images/instagram.webp" alt=""></a>
-        </nav>
+        <div class="sociallinks">
+            <nav>
+                <a href="https://www.facebook.com/oscar.patosi"><img src="images/faceboo.webp" alt=""></a>
+                <a href="https://www.tiktok.com/@oscar_patosi"><img src="images/tiktok.webp" alt=""></a>
+                <a href="https://www.instagram.com/vinojenavs/#"><img src="images/instagram.webp" alt=""></a>
+            </nav>
+        </div>
     </footer>
 </body>
 
