--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="about white water rafting">
-    <title>White Water Rafting</title>
+    <title>White Water Rafting About Us</title>
     <meta name="author" content="Onavino Ajenavi">
     <link rel="stylesheet" href="styles/rafting.css">
 
@@ -49,13 +49,12 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, voluptas. Illo totam numquam
                     nesciunt qui ex pariatur ipsam, est quasi labore voluptatum quam ipsum dolorum veniam aliquam quos
                     placeat deserunt.</p>
-                <img src="images/rafting58_600.jpg">
+                <img src="images/rafting58_600.jpg" alt="Raft Scenery">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quam soluta, cumque voluptate
                     sapiente beatae dolor! Possimus quidem ab doloremque, a ducimus, fugit ex laborum, earum iure soluta
                     corporis et?</p>
             </div>
             </section>
-        </div>
 
         <section>
             <h2>Adventure Awaits You</h2>
