--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -30,9 +30,10 @@
     <main>
         <section>
             <div class="info">
-                <h2>Company Information</h2>
+                <h1>Company Information</h1>
                 <p>Airport Rd by Bright Hope Junction, Effurun, Warri Delta state.</p>
                 <p>+234913905351</p>
+                <p>+2349048031034</p>
                 <p>vinojenavs02@gmail.com</p>
 
                 <iframe
@@ -69,9 +70,13 @@
                         <input type="text" name="useremail" id="useremail" placeholder="Email Address">
                     </label>
                     <label>
-                        <input type="radio" id="inquire" name="purpose"> General Inquiry
-                        <input type="radio" id="question" name="purpose"> Reservation Question
-                        <input type="radio" id="suggest" name="purpose"> Website Suggestion
+                        <input type="radio" id="inquire" value="inquire" name="purpose"> General Inquiry
+                    </label>
+                    <label>
+                        <input type="radio" id="question" value="question" name="purpose"> Reservation Question
+                    </label>
+                    <label>
+                        <input type="radio" id="suggest" value="suggest" name="purpose"> Website Suggestion
                     </label>
                     <label for="message">Message</label>
                     <textarea name="message" id="message"></textarea>
@@ -79,7 +84,7 @@
                         <input type="checkbox" name="subscribe" id="subscribe">
                     </label>
                 </fieldset>
-                <button type="submit">Submit</button>
+                <label><button type="submit">Submit</button></label>
             </form>
         </section>
     </main>
