--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -78,7 +78,7 @@
                     <label>
                         <input type="radio" id="suggest" value="suggest" name="purpose"> Website Suggestion
                     </label>
-                    <label for="message">Message</label>
+                    <label for="message">Enter Comment</label>
                     <textarea name="message" id="message"></textarea>
                     <label>Please subscribe me to the monthly newsletter
                         <input type="checkbox" name="subscribe" id="subscribe">
