--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -43,23 +43,21 @@
 
             </div>
         </section>
-        <section>
-            <div class="employee">
-                <figure>
-                    <img src="images/employ6.jpg" alt="Employee1">
-                    <figcaption>Manager</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/employ5.jpg" alt="Employee2">
-                    <figcaption>Supervisor</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/employ7.jpg" alt="Employee3">
-                    <figcaption>Administrator</figcaption>
-                </figure>
-            </div>
-        </section>
-        <section>
+        <div class="employee">
+            <figure>
+                <img src="images/employ6.jpg" alt="Employee1">
+                <figcaption>Manager</figcaption>
+            </figure>
+            <figure>
+                <img src="images/employ5.jpg" alt="Employee2">
+                <figcaption>Supervisor</figcaption>
+            </figure>
+            <figure>
+                <img src="images/employ7.jpg" alt="Employee3">
+                <figcaption>Administrator</figcaption>
+            </figure>
+        </div>
+        <div class="form">
             <form>
                 <fieldset>
                     <legend>Comment Form</legend>
@@ -86,7 +84,7 @@
                 </fieldset>
                 <label><button type="submit">Submit</button></label>
             </form>
-        </section>
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 White Water Rafting Onavino Ajenavi</p>
