--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,19 +29,19 @@
     </header>
     <main>
         <div class="soap">
-        <div class="hero">
+            <div class="hero">
             <img src="images/rafting53_600.jpg" alt="white water rafting">
+            </div>
             <h1>Welcome to White Water Rafting</h1>
         </div>
-        </div>
-        <section>
+        <div class=".form">
             <form>
                 <fieldset>
                     <legend>Sign Up Form</legend>
                     <label for="firstname">Enter First Name</label>
                         <input type="text" name="firstname" id="firstname">
                     <label for="lastname">Enter Last Name</label>
-                    <input type="text" name="lastname">
+                    <input type="text" name="lastname" id="lastname">
                     <label for="username">Enter a Username</label>
                         <input type="text" name="username" id="username">
                     <label for="useremail">Enter an Email</label>
@@ -49,19 +49,17 @@
                 </fieldset>  
                 <label><button type="submit">Sign Up</button></label>
             </form>
-        </section>
+        </div>
         <section>
             <div class="info">
             <h2>Book A Trip Now</h2>
-            <button><a href="trips.html">Click here to book trip</a></button>
+            <a href="trips.html">Click here to book trip</a>
             </div>
         </section>
-        <section>
-            <div class="raft">
-            <img src="images/rafting43_600.jpg">
-            <img src="images/rafting59_600.jpg">
-            </div>
-        </section>
+        <div class="raft">
+            <img src="images/rafting43_600.jpg" alt="rafting">
+            <img src="images/rafting59_600.jpg" alt="raft">
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 White Water Rafting Onavino Ajenavi</p>
