--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -30,7 +30,7 @@
     <main>
         <div class="info">
         <h2>Contact Us to book a trip</h2>
-        <p><button><a href="contact.html">Click here</a></button> for more information and book a Trip today</p>
+        <p><a href="contact.html">Click here</a> for more information and book a Trip today</p>
         </div> 
         <section>
             <h2>Our Trips</h2>
@@ -57,8 +57,7 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="table">
+        <div class="table">
             <table>
                 <caption>Our Available Trips</caption>
                 <thead>
@@ -91,8 +90,7 @@
                     </tr>
                 </tbody>
             </table>
-            </div>
-        </section> 
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 White Water Rafting Onavino Ajenavi</p>
